--- a/InvertedIndexTest.ipynb
+++ b/InvertedIndexTest.ipynb
@@ -2,30 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'tropical': {1: [{18, 7, 23}, {'titles': (1, 2), 'bolded': [(1, 3), (5, 7)]}]}}\n"
+      "{'tropical': {1: [{18, 7, 23}, {'titles': (1, 2), 'bolded': {(1, 3), (5, 7)}}]}}\n"
      ]
     }
    ],
    "source": [
+    "#This cell is a raw example of a single item in our inverted index \n",
+    "\n",
     "docId = 1\n",
-    "postion = 2\n",
-    "totalCountForDoc = 5\n",
-    "query= 'tropical fish'\n",
+    "\n",
+    "#Create posting information\n",
+    "posting = []\n",
+    "postions = {7,18,23}\n",
+    "weights = {'titles':(1,2),'bolded':{(1,3),(5,7)}}\n",
+    "posting.append(postions)\n",
+    "posting.append(weights)\n",
+    "\n",
     "\n",
     "#Raw Data structure to hold Token and posting\n",
-    "x = { \"tropical\": {docId: [{7,18,23},{'titles':(1,2),'bolded':[(1,3),(5,7)]}] } }\n",
-    "\n",
-    "#Raw Data structure to hold token and docId sorted by decreasing total frequency of word\n",
-    "counts = { \"tropical\": [(docId,totalCountForDoc), (docId,totalCountForDoc)] }\n",
-    "\n",
+    "x = { \"tropical\": {docId: posting } }\n",
     "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Raw Data structure to hold token and docId sorted by decreasing total frequency of word\n",
+    "totalCountForDoc = 5\n",
+    "counts = { \"tropical\": [(docId,totalCountForDoc), (docId,totalCountForDoc)] }"
    ]
   },
   {
