--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -71,6 +71,8 @@
    ],
    "source": [
     "fishP = Posting()\n",
+    "\n",
+    "#Add positions where fish token found\n",
     "fishP.addPosition(1)\n",
     "fishP.addPosition(2)\n",
     "fishP.positions"
@@ -93,6 +95,7 @@
     }
    ],
    "source": [
+    "#Add positions where title occurs\n",
     "fishP.addWeight('title',(1,4))\n",
     "fishP.addWeight('title',(4,5))\n",
     "fishP.weights['title']"
@@ -115,6 +118,7 @@
     }
    ],
    "source": [
+    "#Add positions where bold text occurs\n",
     "fishP.addWeight('bold',(5,6))\n",
     "fishP.addWeight('bold',(16,19))\n",
     "fishP.weights['bold']"
