Posting class takes a token:str as constructor

--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,13 +64,13 @@
        "{1, 2}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fishP = Posting()\n",
+    "fishP = Posting('fish')\n",
     "\n",
     "#Add positions where fish token found\n",
     "fishP.addPosition(1)\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "{(1, 4), (4, 5)}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "{(5, 6), (16, 19)}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,13 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\tToken: fish\n",
       "\t\tPositions: {1, 2}\n",
       "\t\tWeights:\n",
       "\t\t\ttitle: {(4, 5), (1, 4)}\n",
@@ -147,26 +148,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\tToken: empty\n",
       "\t\tPositions: None\n",
       "\t\tWeights: None\n"
      ]
     }
    ],
    "source": [
-    "emptyP = Posting()\n",
+    "emptyP = Posting('empty')\n",
     "print(emptyP)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +182,7 @@
       "\t\t\ttitle: {(4, 5), (1, 4)}\n",
       "\t\t\tbold: {(16, 19), (5, 6)}\n",
       "\n",
-      "\tToken: tropical\n",
+      "\tToken: empty\n",
       "\t\tPositions: None\n",
       "\t\tWeights: None\n",
       "DocId: 2\n",
@@ -197,12 +199,12 @@
    ],
    "source": [
     "invIndex = InvertedIndex() #create inverted index to hold token and posting\n",
-    "invIndex.addTokenPosting('fish', fishP)\n",
-    "invIndex.addTokenPosting('tropical', emptyP)\n",
+    "invIndex.addTokenPosting(fishP)\n",
+    "invIndex.addTokenPosting(emptyP)\n",
     "\n",
     "#Finish reading a document increase count for docId\n",
     "invIndex.incDocId()\n",
-    "invIndex.addTokenPosting('fish', fishP)\n",
+    "invIndex.addTokenPosting(fishP)\n",
     "\n",
     "print(invIndex)"
    ]
