remove new line after printing Posting

--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -137,8 +137,7 @@
       "\t\tPositions: {1, 2}\n",
       "\t\tWeights:\n",
       "\t\t\ttitle: {(4, 5), (1, 4)}\n",
-      "\t\t\tbold: {(16, 19), (5, 6)}\n",
-      "\n"
+      "\t\t\tbold: {(16, 19), (5, 6)}\n"
      ]
     }
    ],
@@ -181,7 +180,6 @@
       "\t\tWeights:\n",
       "\t\t\ttitle: {(4, 5), (1, 4)}\n",
       "\t\t\tbold: {(16, 19), (5, 6)}\n",
-      "\n",
       "\tToken: empty\n",
       "\t\tPositions: None\n",
       "\t\tWeights: None\n",
@@ -191,7 +189,6 @@
       "\t\tWeights:\n",
       "\t\t\ttitle: {(4, 5), (1, 4)}\n",
       "\t\t\tbold: {(16, 19), (5, 6)}\n",
-      "\n",
       "\n",
       "\n"
      ]
