add printDoc to Inverted Index class

--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -205,6 +205,49 @@
     "\n",
     "print(invIndex)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DocId: 1\n",
+      "\tToken: fish\n",
+      "\t\tPositions: {1, 2}\n",
+      "\t\tWeights:\n",
+      "\t\t\ttitle: {(4, 5), (1, 4)}\n",
+      "\t\t\tbold: {(16, 19), (5, 6)}\n",
+      "\tToken: empty\n",
+      "\t\tPositions: None\n",
+      "\t\tWeights: None\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "invIndex.printDoc(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Does not Exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "invIndex.printDoc(0)"
+   ]
   }
  ],
  "metadata": {
