rename class member variables

--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -75,7 +75,7 @@
     "#Add positions where fish token found\n",
     "fishP.addPosition(1)\n",
     "fishP.addPosition(2)\n",
-    "fishP.positions"
+    "fishP['positions']"
    ]
   },
   {
@@ -98,7 +98,7 @@
     "#Add positions where title occurs\n",
     "fishP.addWeight('title',(1,4))\n",
     "fishP.addWeight('title',(4,5))\n",
-    "fishP.weights['title']"
+    "fishP['weights']['title']"
    ]
   },
   {
@@ -121,7 +121,7 @@
     "#Add positions where bold text occurs\n",
     "fishP.addWeight('bold',(5,6))\n",
     "fishP.addWeight('bold',(16,19))\n",
-    "fishP.weights['bold']"
+    "fishP['weights']['bold']"
    ]
   },
   {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "{(5, 6), (16, 19)}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
