add printWeights func to Posting class

--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -126,6 +126,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<function Posting.__init__.<locals>.<lambda> at 0x000001AC0C939A20>, {'title': {(4, 5), (1, 4)}, 'bold': {(16, 19), (5, 6)}, 'IDK': set()})\n"
+     ]
+    }
+   ],
+   "source": [
+    "fishP.printWeights()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
