--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -33,17 +33,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Raw Data structure to hold token and docId sorted by decreasing total frequency of word\n",
-    "totalCountForDoc = 5\n",
-    "counts = { \"tropical\": [(docId,totalCountForDoc), (docId,totalCountForDoc)] }"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -375,6 +364,19 @@
    "source": [
     "#Go to doc 1 and get fish positions for a non existing weight\n",
     "invIndex[1]['fish']['weights']['IDK']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#We will go through documents using this datastructure\n",
+    "\n",
+    "#Raw Data structure to hold token and docId sorted by decreasing total frequency of word\n",
+    "totalCountForDoc = 5\n",
+    "counts = { \"tropical\": [(docId,totalCountForDoc), (docId,totalCountForDoc)] }"
    ]
   }
  ],
