--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
     "docId = 1\n",
     "\n",
     "#Create posting information\n",
-    "posting = []\n",
+    "posting = [] #create a class for this\n",
     "postions = {7,18,23}\n",
     "weights = {'titles':(1,2),'bolded':{(1,3),(5,7)}}\n",
     "posting.append(postions)\n",
