add document class and move weights into doc class

--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -2,33 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'tropical': {1: [{18, 7, 23}, {'titles': (1, 2), 'bolded': {(1, 3), (5, 7)}}]}}\n"
+      "{1: ({'titles': (1, 2), 'bolded': {(1, 3), (5, 7)}}, {'tropical': {18, 7, 23}})}\n"
      ]
     }
    ],
    "source": [
     "#This cell is a raw example of a single item in our inverted index \n",
     "\n",
+    "#Doc information\n",
     "docId = 1\n",
-    "\n",
-    "#Create posting information\n",
-    "posting = [] #create a class for this\n",
-    "postions = {7,18,23}\n",
     "weights = {'titles':(1,2),'bolded':{(1,3),(5,7)}}\n",
-    "posting.append(postions)\n",
-    "posting.append(weights)\n",
     "\n",
+    "#Posting information\n",
+    "postions = {7,18,23}\n",
+    "posting = {'tropical': postions}\n",
     "\n",
-    "#Raw Data structure to hold Token and posting\n",
-    "x = { \"tropical\": {docId: posting } }\n",
-    "print(x)"
+    "doc = (weights, posting)\n",
+    "\n",
+    "#Raw Data structure to hold docId with multiple token postings\n",
+    "invertedIndex = { docId: doc }\n",
+    "print(invertedIndex)"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "source": [
     "import sys  \n",
     "sys.path.insert(0, './HelperClass.py')\n",
-    "from HelperClass import InvertedIndex, Posting"
+    "from HelperClass import InvertedIndex, Posting, Document"
    ]
   },
   {
@@ -48,23 +48,23 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{1, 2}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tToken: fish\n",
+      "\t\tPositions: {1, 2}\n"
+     ]
     }
    ],
    "source": [
-    "fishP = Posting('fish')\n",
+    "#Create posting obj to hold positions of where token occurs\n",
+    "fishP = Posting('fish') \n",
     "\n",
     "#Add positions where fish token found\n",
     "fishP.addPosition(1)\n",
     "fishP.addPosition(2)\n",
-    "fishP['positions']"
+    "\n",
+    "print(fishP)"
    ]
   },
   {
@@ -73,21 +73,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{(1, 4), (4, 5)}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tToken: empty\n",
+      "\t\tPositions: None\n"
+     ]
     }
    ],
    "source": [
-    "#Add positions where title occurs\n",
-    "fishP.addWeight('title',(1,4))\n",
-    "fishP.addWeight('title',(4,5))\n",
-    "fishP['weights']['title']"
+    "emptyP = Posting('empty')\n",
+    "print(emptyP)"
    ]
   },
   {
@@ -96,21 +92,31 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{(5, 6), (16, 19)}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DocId: 1\n",
+      "\tWeights:\n",
+      "\t\ttitle:{(1, 3), (20, 30)}\n",
+      "\t\tbold:{(4, 7)}\n",
+      "DocId: 2\n",
+      "\tWeights:\n",
+      "\t\ttitle:{(1, 7)}\n"
+     ]
     }
    ],
    "source": [
-    "#Add positions where bold text occurs\n",
-    "fishP.addWeight('bold',(5,6))\n",
-    "fishP.addWeight('bold',(16,19))\n",
-    "fishP['weights']['bold']"
+    "#Create doc object to hold weights and multiple posting obj\n",
+    "doc1 = Document(1) \n",
+    "doc1.addWeight('title',(1,3))\n",
+    "doc1.addWeight('title',(20,30))\n",
+    "doc1.addWeight('bold',(4,7))\n",
+    "\n",
+    "doc2 = Document(2)\n",
+    "doc2.addWeight('title',(1,7))\n",
+    "\n",
+    "print(doc1)\n",
+    "print(doc2)"
    ]
   },
   {
@@ -122,14 +128,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weights:\n",
-      "\ttitle: {(4, 5), (1, 4)}\n",
-      "\tbold: {(16, 19), (5, 6)}\n"
+      "DocId: 1\n",
+      "\tWeights:\n",
+      "\t\ttitle:{(1, 3), (20, 30)}\n",
+      "\t\tbold:{(4, 7)}\n",
+      "\tToken: fish\n",
+      "\t\tPositions: {1, 2}\n",
+      "\tToken: empty\n",
+      "\t\tPositions: None\n",
+      "DocId: 2\n",
+      "\tWeights:\n",
+      "\t\ttitle:{(1, 7)}\n",
+      "\tToken: empty\n",
+      "\t\tPositions: None\n"
      ]
     }
    ],
    "source": [
-    "fishP.printWeights()"
+    "#Add postings to document(s)\n",
+    "doc1.addPosting(fishP)\n",
+    "doc1.addPosting(emptyP)\n",
+    "doc2.addPosting(emptyP)\n",
+    "\n",
+    "print(doc1)\n",
+    "print(doc2)"
    ]
   },
   {
@@ -141,16 +163,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Size: 2\n",
+      "DocId: 1\n",
+      "\tWeights:\n",
+      "\t\ttitle:{(1, 3), (20, 30)}\n",
+      "\t\tbold:{(4, 7)}\n",
       "\tToken: fish\n",
       "\t\tPositions: {1, 2}\n",
-      "\t\tWeights:\n",
-      "\t\t\ttitle: {(4, 5), (1, 4)}\n",
-      "\t\t\tbold: {(16, 19), (5, 6)}\n"
+      "\tToken: empty\n",
+      "\t\tPositions: None\n",
+      "DocId: 2\n",
+      "\tWeights:\n",
+      "\t\ttitle:{(1, 7)}\n",
+      "\tToken: empty\n",
+      "\t\tPositions: None\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(fishP)"
+    "#create inverted index obj to hold multiple documents\n",
+    "invIndex = InvertedIndex() \n",
+    "invIndex.addDoc(doc1)\n",
+    "invIndex.addDoc(doc2)\n",
+    "\n",
+    "print(invIndex)"
    ]
   },
   {
@@ -159,120 +196,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tToken: empty\n",
-      "\t\tPositions: None\n",
-      "\t\tWeights: None\n"
-     ]
-    }
-   ],
-   "source": [
-    "emptyP = Posting('empty')\n",
-    "print(emptyP)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DocId: 1\n",
-      "\tToken: fish\n",
-      "\t\tPositions: {1, 2}\n",
-      "\t\tWeights:\n",
-      "\t\t\ttitle: {(4, 5), (1, 4)}\n",
-      "\t\t\tbold: {(16, 19), (5, 6)}\n",
-      "\tToken: empty\n",
-      "\t\tPositions: None\n",
-      "\t\tWeights: None\n",
-      "DocId: 2\n",
-      "\tToken: fish\n",
-      "\t\tPositions: {1, 2}\n",
-      "\t\tWeights:\n",
-      "\t\t\ttitle: {(4, 5), (1, 4)}\n",
-      "\t\t\tbold: {(16, 19), (5, 6)}\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "invIndex = InvertedIndex() #create inverted index to hold token and posting\n",
-    "invIndex.addTokenPosting(fishP)\n",
-    "invIndex.addTokenPosting(emptyP)\n",
-    "\n",
-    "#Finish reading a document increase count for docId\n",
-    "invIndex.incDocId()\n",
-    "invIndex.addTokenPosting(fishP)\n",
-    "\n",
-    "print(invIndex)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DocId: 1\n",
-      "\tToken: fish\n",
-      "\t\tPositions: {1, 2}\n",
-      "\t\tWeights:\n",
-      "\t\t\ttitle: {(4, 5), (1, 4)}\n",
-      "\t\t\tbold: {(16, 19), (5, 6)}\n",
-      "\tToken: empty\n",
-      "\t\tPositions: None\n",
-      "\t\tWeights: None\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "invIndex.printDoc(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Does not Exist\n"
-     ]
-    }
-   ],
-   "source": [
-    "invIndex.printDoc(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
        "\tToken: fish\n",
-       "\t\tPositions: {1, 2}\n",
-       "\t\tWeights:\n",
-       "\t\t\ttitle: {(4, 5), (1, 4)}\n",
-       "\t\t\tbold: {(16, 19), (5, 6)}"
+       "\t\tPositions: {1, 2}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +223,7 @@
        "{1, 2}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,76 +235,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tWeights:\n",
+      "\t\ttitle:{(1, 3), (20, 30)}\n",
+      "\t\tbold:{(4, 7)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Go to doc1 and print its weights\n",
+    "invIndex[1].printWeights()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(1, 4), (4, 5)}"
+       "{(1, 3), (20, 30)}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Go to doc 1 and get fish weights for titles\n",
-    "invIndex[1]['fish']['weights']['title']"
+    "#Go to doc1 and get the positions of where title is\n",
+    "invIndex[1].getWeights()['title']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{(5, 6), (16, 19)}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Go to doc 1 and get fish weights for bolded words\n",
-    "invIndex[1]['fish']['weights']['bold']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "set()"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Go to doc 1 and get fish weights for a non existing weight\n",
-    "invIndex[1]['fish']['weights']['IDK']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#We will go through documents using this datastructure\n",
+    "#We will go through documents using this data structure\n",
     "\n",
     "#Raw Data structure to hold token and docId sorted by decreasing total frequency of word\n",
+    "docId = 1\n",
     "totalCountForDoc = 5\n",
     "counts = { \"tropical\": [(docId,totalCountForDoc), (docId,totalCountForDoc)] }"
    ]
