--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "#Doc information\n",
     "docId = 1\n",
-    "weights = {'titles':(1,2),'bolded':{(1,3),(5,7)}}\n",
+    "weights = {'titles':{(1,2)},'bolded':{(1,3),(5,7)}}\n",
     "\n",
     "#Posting information\n",
     "postions = {7,18,23}\n",
