fix spelling error

--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -21,8 +21,8 @@
     "weights = {'titles':{(1,2)},'bolded':{(1,3),(5,7)}}\n",
     "\n",
     "#Posting information\n",
-    "postions = {7,18,23}\n",
-    "posting = {'tropical': postions}\n",
+    "positions = {7,18,23}\n",
+    "posting = {'tropical': positions}\n",
     "\n",
     "doc = (weights, posting)\n",
     "\n",
