update weights to take pos:int

--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: ({'titles': (1, 2), 'bolded': {(1, 3), (5, 7)}}, {'tropical': {18, 7, 23}})}\n"
+      "{1: ({'titles': {(1, 2)}, 'bolded': {(1, 3), (5, 7)}}, {'tropical': {18, 7, 23}})}\n"
      ]
     }
    ],
@@ -97,23 +97,25 @@
      "text": [
       "DocId: 1\n",
       "\tWeights:\n",
-      "\t\ttitle:{(1, 3), (20, 30)}\n",
-      "\t\tbold:{(4, 7)}\n",
+      "\t\ttitle:{1, 20}\n",
+      "\t\tnormal:{20}\n",
+      "\t\tbold:{4}\n",
       "DocId: 2\n",
       "\tWeights:\n",
-      "\t\ttitle:{(1, 7)}\n"
+      "\t\ttitle:{1}\n"
      ]
     }
    ],
    "source": [
     "#Create doc object to hold weights and multiple posting obj\n",
     "doc1 = Document(1) \n",
-    "doc1.addWeight('title',(1,3))\n",
-    "doc1.addWeight('title',(20,30))\n",
-    "doc1.addWeight('bold',(4,7))\n",
+    "doc1.addWeight('title',(1))\n",
+    "doc1.addWeight('title',(20))\n",
+    "doc1.addWeight('normal',(20))\n",
+    "doc1.addWeight('bold',(4))\n",
     "\n",
     "doc2 = Document(2)\n",
-    "doc2.addWeight('title',(1,7))\n",
+    "doc2.addWeight('title',(1))\n",
     "\n",
     "print(doc1)\n",
     "print(doc2)"
@@ -130,15 +132,16 @@
      "text": [
       "DocId: 1\n",
       "\tWeights:\n",
-      "\t\ttitle:{(1, 3), (20, 30)}\n",
-      "\t\tbold:{(4, 7)}\n",
+      "\t\ttitle:{1, 20}\n",
+      "\t\tnormal:{20}\n",
+      "\t\tbold:{4}\n",
       "\tToken: fish\n",
       "\t\tPositions: {1, 2}\n",
       "\tToken: empty\n",
       "\t\tPositions: None\n",
       "DocId: 2\n",
       "\tWeights:\n",
-      "\t\ttitle:{(1, 7)}\n",
+      "\t\ttitle:{1}\n",
       "\tToken: empty\n",
       "\t\tPositions: None\n"
      ]
@@ -166,15 +169,16 @@
       "Size: 2\n",
       "DocId: 1\n",
       "\tWeights:\n",
-      "\t\ttitle:{(1, 3), (20, 30)}\n",
-      "\t\tbold:{(4, 7)}\n",
+      "\t\ttitle:{1, 20}\n",
+      "\t\tnormal:{20}\n",
+      "\t\tbold:{4}\n",
       "\tToken: fish\n",
       "\t\tPositions: {1, 2}\n",
       "\tToken: empty\n",
       "\t\tPositions: None\n",
       "DocId: 2\n",
       "\tWeights:\n",
-      "\t\ttitle:{(1, 7)}\n",
+      "\t\ttitle:{1}\n",
       "\tToken: empty\n",
       "\t\tPositions: None\n",
       "\n"
@@ -243,8 +247,9 @@
      "output_type": "stream",
      "text": [
       "\tWeights:\n",
-      "\t\ttitle:{(1, 3), (20, 30)}\n",
-      "\t\tbold:{(4, 7)}\n"
+      "\t\ttitle:{1, 20}\n",
+      "\t\tnormal:{20}\n",
+      "\t\tbold:{4}\n"
      ]
     }
    ],
@@ -261,7 +266,7 @@
     {
      "data": {
       "text/plain": [
-       "{(1, 3), (20, 30)}"
+       "{1, 20}"
       ]
      },
      "execution_count": 11,
