--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "#Doc information\n",
     "docId = 1\n",
-    "weights = {'titles':{(1,2)},'bolded':{(1,3),(5,7)}}\n",
+    "weights = {'titles':{1,2,3},'bolded':{5,6,7}}\n",
     "\n",
     "#Posting information\n",
     "positions = {7,18,23}\n",
@@ -111,7 +111,7 @@
     "doc1 = Document(1) \n",
     "doc1.addWeight('title',(1))\n",
     "doc1.addWeight('title',(20))\n",
-    "doc1.addWeight('normal',(20))\n",
+    "doc1.addWeight('normal',(21))\n",
     "doc1.addWeight('bold',(4))\n",
     "\n",
     "doc2 = Document(2)\n",
