--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: ({'titles': {(1, 2)}, 'bolded': {(1, 3), (5, 7)}}, {'tropical': {18, 7, 23}})}\n"
+      "{1: ({'titles': {1, 2, 3}, 'bolded': {5, 6, 7}}, {'tropical': {18, 7, 23}})}\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
       "DocId: 1\n",
       "\tWeights:\n",
       "\t\ttitle:{1, 20}\n",
-      "\t\tnormal:{20}\n",
+      "\t\tnormal:{21}\n",
       "\t\tbold:{4}\n",
       "DocId: 2\n",
       "\tWeights:\n",
@@ -133,7 +133,7 @@
       "DocId: 1\n",
       "\tWeights:\n",
       "\t\ttitle:{1, 20}\n",
-      "\t\tnormal:{20}\n",
+      "\t\tnormal:{21}\n",
       "\t\tbold:{4}\n",
       "\tToken: fish\n",
       "\t\tPositions: {1, 2}\n",
@@ -170,7 +170,7 @@
       "DocId: 1\n",
       "\tWeights:\n",
       "\t\ttitle:{1, 20}\n",
-      "\t\tnormal:{20}\n",
+      "\t\tnormal:{21}\n",
       "\t\tbold:{4}\n",
       "\tToken: fish\n",
       "\t\tPositions: {1, 2}\n",
@@ -248,7 +248,7 @@
      "text": [
       "\tWeights:\n",
       "\t\ttitle:{1, 20}\n",
-      "\t\tnormal:{20}\n",
+      "\t\tnormal:{21}\n",
       "\t\tbold:{4}\n"
      ]
     }
